--- a/info.html
+++ b/info.html
@@ -115,7 +115,7 @@
         <div class="right-side">
           
           <div class="right-vid" >
-              <iframe src="https://player.vimeo.com/video/809615651?h=0558d901fb&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="imagine.mp4"></iframe>
+              <iframe src="https://player.vimeo.com/video/809615651?h=0558d901fb&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:92%;height:100%;" title="imagine.mp4"></iframe>
           </div>
             <script src="https://player.vimeo.com/api/player.js"></script>
 
@@ -124,7 +124,9 @@
 
 
       </div>
-
+      <footer>
+        <p>ZOYAH SHAH — PARSONS THESIS PROJECT 2023</p>
+    </footer>
 </body>
 
 </html>
