--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    
+
     <title>Sights and Sounds of Memory Lane</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
 
@@ -76,6 +76,11 @@
     <button onclick="topFunction()" id="backToTop" title="Go to top">TOP</button>
 
     </div>
+
+
+    <footer>
+          <p>ZOYAH SHAH — PARSONS THESIS PROJECT 2023</p>
+      </footer>
 
 
 </body>
