--- a/info.html
+++ b/info.html
@@ -101,6 +101,8 @@
                 to draw the image. The image is comprised of only circles, and the size and color of each one is controlled
                 by the audio input.
                 <br><br>
+
+                <a class="process-page" href="process.html">VIEW MY PROCESS HERE</a>
     
                 <p>KEY</p>
                
