--- a/directory.html
+++ b/directory.html
@@ -36,6 +36,15 @@
         </ul>
     </div>
 
+    <div class="header">
+        <ul class="header-nav">
+        <li><h4 class="header-title">TITLE</h4></li>
+        <li><h4 class="header-subtitle">SUBTITLE</h4></li>
+        <li><h4 class="header-type">TYPE</h4></li>
+    </ul>
+
+    </div>
+
     <div class="container">
     
     </div>
