--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
    
 
-    <p id="text" style="display:none;">SIGHTS AND SOUNDS OF MEMORY LANE</p>
-    <p id="subtext">VISUAL REPRESENTATIONS OF AUDITORY EXPERIENCES</p> 
-    <p id="disclaimer">**BEST VEIWED ON GOOGLE CHROME AT FULL SCREEN**</p>
+    <p id="text" style="display:none;">**BEST VIEWED ON GOOGLE CHROME AT FULL SCREEN**</p>
+    <!-- <p id="subtext">VISUAL REPRESENTATIONS OF AUDITORY EXPERIENCES</p>  -->
+    <!-- <p id="disclaimer">**BEST VEIWED ON GOOGLE CHROME AT FULL SCREEN**</p> -->
 
     <img id="zoom-in" src="assets/gogo2.jpg" style="z-index: -1;" alt="background image">
 
-   
+  
 </body>
 </html>
