--- a/process.html
+++ b/process.html
@@ -30,7 +30,17 @@
         <h1 class="process-title">PROCESS</h1>
 
         <div class="content">
-            
+            <!-- <div class="content-description">
+            <p>Project Description: <br><br>
+                “Sights and Sounds of Memory Lane” explores the intersection of memory and audio through creative coding and generative design.
+<br><br>
+By visualizing the auditory elements that are attached to memories, a new way of experiencing and remembering those moments is uncovered. These visuals can even deepen one’s understanding of the memory or enhance one’s emotional connection to them.
+<br><br>
+Each visual is generated in Processing, using the Minim library to extract data from the audio input. Audio is loaded into the code, and used to generate a visual output by taking the frequency spectrum and amplitude to draw the image. The image is comprised of only circles, and the size and color of each one is controlled by the audio input. My overall goal with this project was to create data driven visuals that encapsulate the emotional journey of the memories associated with audio.
+<br><br>
+The visuals produced draw resemblance to the iris of an eye, a CD, record label, genome sequence mapping, and even hard drive defragmentation. Despite all of these things sounding drastically different from each other, they share a couple commonalities— the storage of data and similar visual look. This notion of data storage and visual output is similar to the concept of memories, and is what is captured in the visualizations of auditory experiences and memories.
+<br>
+</div> -->
 
 <div class="container-info">
     <div class="container-left">
